# brchd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PKGBUILD  README.md  brchd.1.scd  brchd.toml  release.toml
.github/workflows/: binaries.yml  docker.yml  rust.yml
benches/: crypto.rs
ci/: tests.sh
src/: args.rs  config.rs  daemon.rs  destination.rs  errors.rs  html.rs  http.rs  ipc.rs  lib.rs  main.rs  pathspec.rs  queue.rs  spider.rs  standalone.rs  status.rs  temp.rs  uploader.rs  walkdir.rs  web.rs
src/config/: client.rs  crypto.rs  daemon.rs  file.rs  mod.rs  upload.rs
src/crypto/: header.rs  mod.rs  shim.rs  stream.rs  upload.rs
src/httpd/: destination.rs  mod.rs  shim.rs
src/ipc/: mod.rs  unix.rs  windows.rs
src/spider/: mod.rs  shim.rs
