[package]
name = "brchd"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crypto", "httpd", "dynamic-libsodium", "native-tls"]
dynamic-libsodium = ["sodiumoxide/use-pkg-config"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
crypto = ["sodiumoxide", "nom", "base64", "base64-serde"]
httpd = ["actix-rt", "actix-web", "actix-service", "actix-multipart", "futures"]

[dependencies]
structopt = "0.3"
toml = "0.5"
serde = { version="1", features=["derive"] }
serde_json = "1.0.48"
log = "0.4.8"
failure = "0.1.6"
env_logger = "0.7.1"
reqwest = { version="0.10.2", default-features=false, features=["blocking", "socks"] }
chrono = "0.4.10"
rand = "0.7.3"
html5ever = "0.25"
markup5ever_rcdom = "0.1.0"
url = { version="2.1.1", features=["serde"] }
walkdir = "2"
bufstream = "0.1.4"
crossbeam-channel = "0.4.2"
console = "0.10.0"
humansize = "1.1.0"
dirs = "2.0.2"

# crypto
sodiumoxide = { version = "0.2.5", optional = true }
nom = { version = "5.1.1", optional = true }
base64 = { version = "0.12.0", optional = true }
base64-serde = { version = "0.5.0", optional = true }

# httpd
actix-rt = { version = "1.0.0", optional = true }
actix-web = { version = "2.0.0", optional = true }
actix-service = { version = "1.0.5", optional = true }
actix-multipart = { version = "0.2.0", optional = true }
futures = { version = "0.3.4", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
named_pipe = "0.4.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "crypto"
harness = false
